@@ -1,66 +1,177 @@
 package ru.practicum.item;
 
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import ru.practicum.booking.Booking;
+import ru.practicum.booking.BookingRepository;
+import ru.practicum.exception.InvalidCommentException;
 import ru.practicum.exception.NotFoundException;
+import ru.practicum.item.dto.CommentDto;
 import ru.practicum.item.dto.ItemDto;
-import ru.practicum.user.UserService;
+import ru.practicum.user.User;
+import ru.practicum.user.UserRepository;
 
+import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Service
+@RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class ItemServiceImpl implements ItemService {
     private final ItemRepository itemRepository;
-    private final UserService userService;
-
-    public ItemServiceImpl(ItemRepository itemRepository, UserService userService) {
-        this.itemRepository = itemRepository;
-        this.userService = userService;
-    }
+    private final UserRepository userRepository;
+    private final BookingRepository bookingRepository;
+    private final CommentRepository commentRepository;
+    private final CommentMapper commentMapper;
+    private final ItemMapper itemMapper;
 
     @Override
+    @Transactional
     public ItemDto create(ItemDto itemDto, Long ownerId) {
-        userService.getById(ownerId);
-        Item item = ItemMapper.toItem(itemDto, ownerId);
-        return ItemMapper.toItemDto(itemRepository.save(item));
+        log.info("Creating item for owner {}", ownerId);
+        User owner = userRepository.findById(ownerId)
+                .orElseThrow(() -> {
+                    log.error("User with id {} not found", ownerId);
+                    return new NotFoundException("User not found");
+                });
+
+        Item item = itemMapper.toItem(itemDto, owner);
+        Item savedItem = itemRepository.save(item);
+        log.debug("Created item with id {}", savedItem.getId());
+
+        return itemMapper.toItemDto(savedItem);
     }
 
     @Override
+    @Transactional
     public ItemDto update(ItemDto itemDto, Long ownerId) {
+        log.info("Updating item {} for owner {}", itemDto.getId(), ownerId);
         Item existingItem = itemRepository.findById(itemDto.getId())
-                .orElseThrow(() -> new NotFoundException("Предмет не найден"));
+                .orElseThrow(() -> {
+                    log.error("Item with id {} not found", itemDto.getId());
+                    return new NotFoundException("Item not found");
+                });
 
-        if (!existingItem.getOwnerId().equals(ownerId)) {
-            throw new NotFoundException("Только владелец может обновлять предмет");
+        if (!existingItem.getOwner().getId().equals(ownerId)) {
+            log.error("User {} is not owner of item {}", ownerId, itemDto.getId());
+            throw new NotFoundException("Only owner can update item");
         }
 
-        ItemMapper.updateItemFromDto(itemDto, existingItem);
-        return ItemMapper.toItemDto(itemRepository.save(existingItem));
+        itemMapper.updateItemFromDto(itemDto, existingItem);
+        Item updatedItem = itemRepository.save(existingItem);
+        log.debug("Updated item with id {}", updatedItem.getId());
+
+        return itemMapper.toItemDto(updatedItem);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public ItemDto getById(Long id, Long ownerId) {
+        log.info("Getting item {} for user {}", id, ownerId);
         Item item = itemRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Предмет не найден"));
-        return ItemMapper.toItemDto(item);
+                .orElseThrow(() -> {
+                    log.error("Item with id {} not found", id);
+                    return new NotFoundException("Item not found");
+                });
+
+        return enrichAndConvertToDto(item, ownerId);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<ItemDto> getAllByOwner(Long ownerId) {
-        userService.getById(ownerId);
-        return itemRepository.findAllByOwnerId(ownerId).stream()
-                .map(ItemMapper::toItemDto)
+        log.info("Getting all items for owner {}", ownerId);
+        return itemRepository.findByOwnerIdOrderById(ownerId).stream()
+                .map(item -> enrichAndConvertToDto(item, ownerId))
                 .collect(Collectors.toList());
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<ItemDto> search(String text) {
-        if (text.isBlank()) {
-            return List.of();
+        log.info("Searching items by text: {}", text);
+        if (text == null || text.isBlank()) {
+            return Collections.emptyList();
         }
         return itemRepository.search(text).stream()
-                .filter(Item::getAvailable)
-                .map(ItemMapper::toItemDto)
+                .map(itemMapper::toItemDto)
                 .collect(Collectors.toList());
+    }
+
+    @Override
+    @Transactional
+    public CommentDto addComment(Long userId, Long itemId, CommentDto commentDto) {
+        log.info("Adding comment to item {} by user {}", itemId, userId);
+        User author = userRepository.findById(userId)
+                .orElseThrow(() -> {
+                    log.error("User with id {} not found", userId);
+                    return new NotFoundException("User not found");
+                });
+
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> {
+                    log.error("Item with id {} not found", itemId);
+                    return new NotFoundException("Item not found");
+                });
+
+        validateUserBookedItem(itemId, userId);
+
+        Comment comment = commentMapper.toEntity(commentDto);
+        comment.setItem(item);
+        comment.setAuthor(author);
+        comment.setCreated(LocalDateTime.now());
+
+        Comment savedComment = commentRepository.save(comment);
+        log.debug("Added comment with id {}", savedComment.getId());
+
+        return commentMapper.toDto(savedComment);
+    }
+
+    private ItemDto enrichAndConvertToDto(Item item, Long ownerId) {
+        ItemDto itemDto = itemMapper.toItemDto(item);
+        enrichItemDtoWithAdditionalData(itemDto, item, ownerId);
+        return itemDto;
+    }
+
+    private void enrichItemDtoWithAdditionalData(ItemDto itemDto, Item item, Long ownerId) {
+        if (item.getOwner().getId().equals(ownerId)) {
+            LocalDateTime now = LocalDateTime.now();
+            addBookingInfo(itemDto, item.getId(), now);
+        }
+        addCommentsInfo(itemDto, item.getId());
+    }
+
+    private void addBookingInfo(ItemDto itemDto, Long itemId, LocalDateTime now) {
+        bookingRepository.findLastBooking(itemId, now).stream()
+                .findFirst()
+                .ifPresent(booking -> itemDto.setLastBooking(
+                        new ItemDto.BookingShort(booking.getId(), booking.getBooker().getId())));
+
+        bookingRepository.findNextBooking(itemId, now).stream()
+                .findFirst()
+                .ifPresent(booking -> itemDto.setNextBooking(
+                        new ItemDto.BookingShort(booking.getId(), booking.getBooker().getId())));
+    }
+
+    private void addCommentsInfo(ItemDto itemDto, Long itemId) {
+        List<CommentDto> comments = commentRepository.findByItemId(itemId).stream()
+                .map(commentMapper::toDto)
+                .collect(Collectors.toList());
+        itemDto.setComments(comments);
+    }
+
+    private void validateUserBookedItem(Long itemId, Long userId) {
+        List<Booking> bookings = bookingRepository.findCompletedBookings(
+                itemId, userId, LocalDateTime.now());
+
+        if (bookings.isEmpty()) {
+            log.error("User {} never booked item {}", userId, itemId);
+            throw new InvalidCommentException("User never booked this item");
+        }
     }
 }
